🐛 fix: scrollbar was visible all the time

--- a/header.scss
+++ b/header.scss
@@ -41,7 +41,7 @@ header {
   align-items: center;
   gap: 2.5rem;
   padding: 0.7rem;
-  overflow: scroll;
+  overflow-x: auto;
 }
 
 .option {
